--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>AudiodropMap</title>
 
         <!-- Core AngularJS library -->
-        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
         
         <!-- stylesheets -->
         <link rel="stylesheet" href="css/style.css">
