--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         
         <script src="js/app.js"></script>
         <script src="js/controllers/dropMapController.js"></script>
-        <!-- Insert google maps api script + key -->
+        <!-- Insert google maps api script + key: AIzaSyAf4NliDFP1ZLr-8SL4wfNQ85U7LnZqngk -->
+        <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAf4NliDFP1ZLr-8SL4wfNQ85U7LnZqngk&callback=initMap">
+    </script>
     </body>
 </html>
