--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </script>
         <ui-gmap-google-map center='map.center' zoom='map.zoom' events="map.events" bounds="map.bounds">
             <ui-gmap-search-box template="map.searchbox.template" events="map.searchbox.events"></ui-gmap-search-box>
-            <ui-gmap-marker coords="map.clickedMarker"  idKey="map.clickedMarker.id" options="map.clickedMarker.options" events="map.clickedMarker.events"></ui-gmap-marker>
+            <ui-gmap-marker coords="map.clickedPoint"  idKey="map.clickedPoint.id" options="map.clickedPoint.options" events="map.clickedPoint.events"></ui-gmap-marker>
             
             <!-- Circle Example-->
             <ui-gmap-circle ng-repeat="c in map.circles track by c.id" center="c.center" stroke="c.stroke" fill="c.fill" radius="c.radius" events="c.events" visible="c.visible" geodesic="c.geodesic" editable="c.editable" draggable="c.draggable" clickable="c.clickable"></ui-gmap-circle>
@@ -36,16 +36,37 @@
         <form id="dropForm">
             <h2 class = "formTitle">New Drop</h2>
             <div class = "form-group">
-                <label class = "control-label">Name:</label>
+                <label class = "control-label">Drop Name</label>
                 <input required class="input form-control" type="text" name="label" ng-model="point.label" />
             </div>
             <div class = "form-group">
-                <label class = "control-label">Latitude:</label>
+                <label class = "control-label">Latitude</label>
                 <input required ng-disabled = "true" class="input form-control" type="number" name="lat" min="-180" max="180"  ng-model="point.coords[1]" />
             </div>
             <div class = "form-group">
-                <label class = "control-label">Longitude:</label>
+                <label class = "control-label">Longitude</label>
                 <input required ng-disabled = "true" class="input form-control" type="number" name="long" min="-180" max="180"  ng-model="point.coords[0]" />
+            </div>
+            <div class = "form-group">
+                <label class = "control-label"
+                       ng-click="toggleClass('track-glyph','rotate90Clockwise')"
+                       data-toggle="collapse"
+                       href="#collapseOne"
+                       aria-expanded="true"
+                       aria-controls="collapseOne">
+                    <span id="track-glyph" class = "rotate90Clockwise glyphicon glyphicon-chevron-right"></span> Track</label>
+                <div id="collapseOne" class="collapse in">
+                    <ul class="trackDataList" type="none">
+                        <li ng-repeat="x in track">
+                            <p>{{ x.dataType }}</p>
+                            <input required ng-disabled = "true" class="input form-control" type="text" ng-model="x.data" />
+                        </li>
+                    </ul>
+                    <div class = "centerText">
+                        <a class="no-margin-or-padding" ng-click="changeTrack(point)">change track</a>
+                    </div>
+                </div>
+                
             </div>
             <div class="form-group">
                 <button class="btn btn-danger"
