--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <input required ng-disabled = "true" class="input form-control" type="number" name="long" min="-180" max="180"  ng-model="point.coords[0]" />
             </div>
             <div class = "form-group">
-                <label class = "control-label"
+                <label class = "control-label trackListLabel"
                        ng-click="toggleTrackListCollapse()"
                        data-toggle="collapse"
                        href="#collapseOne"
